Solving some Refactor Issues